# advent_of_code

./: day8.ipynb  pyproject.toml
day1/: sonar_readings.ipynb
day10/: day10.ipynb
day11/: day11.ipynb
day12/: day12.ipynb
day2/: day2.ipynb  input_data.csv
day3/: day3.ipynb  day3.py
day4/: day4.ipynb
day5/: day5.ipynb
day6/: day6.ipynb
day7/: day7.ipynb
day8/: day8.ipynb
day9/: day9.ipynb
